istio-working.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug-pod
  template:
    metadata:
      name: debug-pod
      labels:
        app: debug-pod
    spec:
      containers:
        - name: debug-pod
          image: ubuntu:20.04
          command: ["sleep"]
          args: ["3600"]
          imagePullPolicy: Always
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin.org
spec:
  hosts:
  - httpbin.org
  ports:
  - number: 80
    name: http
    protocol: HTTP
  exportTo:
  - "."
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin
  http:
  - match:
    - uri:
        regex: ".*"
    rewrite:
      authority: httpbin.org
    route:
    - destination:
        host: httpbin.org
      weight: 100
    timeout: 0.5s
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 3030
  selector:
    app: webserver
  type: ClusterIP
